acm/1
1000000_1800.cpp:1:1: error: expected unqualified-id before numeric constant
 00 run id:1799 problem id:1042
 ^
